--- a/BTL-nhom-14/bin/nhom14/design.css
+++ b/BTL-nhom-14/bin/nhom14/design.css
@@ -1,26 +1,50 @@
 .parent {
-    -fx-background-color: white;
+    -fx-background-color: gray;
 }
+
 .side-bar {
     -fx-background-color: #282b3c;
 }
+
 .main-pane {
     -fx-background-color: #222534;
 }
+
 .cards {
     -fx-background-color: #282b3c;
     -fx-background-radius: 10 10 10 10;
     -fx-border-radius: 10 10 10 10;
 }
+
 .cards:hover {
-    -fx-background-color: #b5b5b5;
+    -fx-background-color: #353652;
 }
+
 .sidebar-option {
     -fx-background-color: #282b3c;
 }
+
 .sidebar-option:hover {
     -fx-background-color: #353652;
     -fx-border-color: #464a8c;
     -fx-border-width: 0 0 0 3;
     -fx-border-style: solid;
+}
+
+.menubar-option {
+    -fx-background-color: #282b3c;
+}
+
+.menu-bar {
+    -fx-background-color: #282b3c;
+}
+
+.menubar-option:hover {
+    -fx-background-color: #353652;
+}
+
+.popup-bar {
+    -fx-background-color: #282b3c;
+    -fx-background-radius: 10 10 10 10;
+    -fx-border-radius: 10 10 10 10;
 }
